--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dxc</groupId>
+  <groupId>com12.dxc</groupId>
   <artifactId>my_maven_project</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  Adding new lines
 
   <name>my_maven_project</name>
   <url>http://maven.apache.org</url>
